--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,6 @@ jobs:
             
             mkdir -p /home/ec2-user/misinfo_data
             
-            sudo kubectl apply -f k8s_deployment.yaml
+            sudo kubectl apply -f k8s/k8s_deployment.yaml
             sudo kubectl rollout restart deployment/misinfo-app
             sudo kubectl get pods
