--- a/k8s/k8s_deployment.yaml
+++ b/k8s/k8s_deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: misinfo-app
 spec:
   replicas: 1
+  strategy:
+    type: Recreate 
   selector:
     matchLabels:
       app: misinformation
