--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           echo "HF_TOKEN=$HF_TOKEN" > .env
           echo "HF_MODEL=$HF_MODEL" >> .env
-          echo "TAVILY_API_KEY=$TAVILY_API_KEY" >> .env # کلید در فایل env داکر هم قرار می‌گیرد
+          echo "TAVILY_API_KEY=$TAVILY_API_KEY" >> .env
           docker build --no-cache -t $ECR_REGISTRY/misinfo_repo:latest .
           docker push $ECR_REGISTRY/misinfo_repo:latest
 
@@ -68,7 +68,12 @@ jobs:
             fi
             
             mkdir -p /home/ec2-user/misinfo_data
-            
+
+            sudo kubectl create secret generic misinfo-secrets \
+              --from-literal=TAVILY_API_KEY='${{ secrets.TAVILY_API_KEY }}' \
+              --from-literal=HF_TOKEN='${{ secrets.HF_TOKEN }}' \
+              --dry-run=client -o yaml | sudo kubectl apply -f -
+
             sudo kubectl apply -f k8s/k8s_deployment.yaml
             sudo kubectl rollout restart deployment/misinfo-app
             sudo kubectl get pods
