--- a/k8s/k8s_deployment.yaml
+++ b/k8s/k8s_deployment.yaml
@@ -20,6 +20,11 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8000 
+        resources:
+          requests:
+            memory: "512Mi"
+          limits:
+            memory: "900Mi"
         env:
         - name: TAVILY_API_KEY
           valueFrom:
